# flashpapers

./: .gitignore  Main.py  README.md  environment.yml  format.py  main_app.py  pyproject.toml
flashpapers/: Main.py  cli.py  config.py  data_manager.py  models.py  utils.py
flashpapers/data/: flashcards.json  flashpapers.json
flashpapers/pages/: Add.py  Review.py
flashpapers/utils/: __init__.py  analytics_utils.py  data_handler.py  flashcard_storage.py  pdf_utils.py  search_utils.py
pages/: 1_➕_Add_Papers.py  2_🔄_Review.py  3_🔍_Search.py  4_📊_Analytics.py  Add_Papers.py  Analytics.py  Review.py  Search.py
tests/: conftest.py  test_app.py  test_config.py  test_data_handler.py  test_models.py  test_pdf_utils.py  test_search_analytics.py  test_storage.py
