[tool.poetry]
name = "flashpapers"
version = "0.1.0"
description = "Flashpaper App to help you recall papers quickly!"
authors = [
    {name = "Raman", email = "ramanrajarathinam@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.46.1"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
